# imPlayer

./: AGENTS.md  CMakeLists.txt  README.md  datastream.txt
cmake/: FindLibcdio.cmake  FindLibsox.cmake  FindLibvgm.cmake  msvc_options.cmake
config/: plugin.config
doc/: iPlayer 开发日志 20260420.md  iPlayer 开发日志20060510.md  imPlayer 开发日志 20260528.md  imPlayer 开发日志 20260606.md
ffmpeg_decoder/: CMakeLists.txt  FfmpegFunc.cpp  FfmpegFunc.h  FfmpegPlayCtrl.cpp  FfmpegPlayCtrl.h  PlugMain.cpp  PlugMain.h  PluginConfig.h  PluginConfigFile.cpp  PluginConfigFile.h  ffmpeg_decoder.def
gme_decoder/: CMakeLists.txt  GmeFunc.cpp  GmeFunc.h  GmePlayCtrl.cpp  GmePlayCtrl.h  PlugMain.cpp  PlugMain.h  PluginConfig.h  PluginConfigFile.cpp  PluginConfigFile.h
include/: ComEnv.h  ComPtr.h  ScopeGuard.h  WinSockEnv.h  cmdline.h  framework.h  std_def.h
include/core/: AudioBuffer.h  AudioConvert.h  AudioDecoder.h  AudioDevice.h  AudioEncoder.h  AudioInfo.h  ConvertFormat.h  CpuArchEndian.h  DataStream.h  DecodeInitCtx.h  Dither.h  EncodingParams.h  FileStream.h  IMA4Util.h  MediaTag.h  MediaTagNames.h  MemBufStream.h  MemoryStream.h  RiffUtils.h  SndfileFunc.h  StdFileSystem.h  StreamMetaSource.h  StreamSectorSource.h  StringEx.h  UnicodeConvert.h  UnicodeNormalize.h  Utf8String.h  iplugsdk.h
include/decoder/: AudioDecoderMap.h  DecoderDllWrapper.h  DecoderFactory.h  DecoderParameters.h  DecoderParametersMgmt.h  Mp3Decoder.h  Mp3Handle.h  NativeDecoder.h  PluginConfig.h  PluginDecoder.h  PluginObjects.h  PluginsMgmt.h  WavDecoder.h
include/encoder/: EncoderFactory.h  EncoderFormatDefine.h  EncoderParamName.h  EncoderParamterDefine.h  EncoderParamterDefineUtils.h  Mp3Encoder.h  NativeEncoder.h  WavEncoder.h
include/player/: AudioDeviceMgmt.h  AudioSource.h  AudioTarget.h  DeviceInfoWin.h  DsAudioDevice.h  GlobalConfig.h  Music.h  MusicItem.h  PlayInterface.h  PlayList.h  PlayListFile.h  PlaySequence.h  Playback.h  PlaybackCallback.h  SoxEffects.h  SoxInputEffect.h  SoxLibInit.h  SoxOutputEffect.h  SpeakerConfig.h  StdFileSystem.h  SystemFunc.h  TUIPlayerUI.h  WasapiAudioDevice.h
libflac_decoder/: CMakeLists.txt  FlacFunc.cpp  FlacFunc.h  FlacPlayCtrl.cpp  FlacPlayCtrl.h  PlugMain.cpp  PlugMain.h
libogg_decoder/: CMakeLists.txt  OggFunc.cpp  OggFunc.h  OggPlayCtrl.cpp  OggPlayCtrl.h  PlugMain.cpp  PlugMain.h
libsnd_decoder/: CMakeLists.txt  LibSndPlayCtrl.cpp  LibSndPlayCtrl.h  LibsndFunc.cpp  LibsndFunc.h  PlugMain.cpp  PlugMain.h
libvgm_decoder/: CMakeLists.txt  LibVgmPlayCtrl.cpp  LibVgmPlayCtrl.h  LibvgmFunc.cpp  LibvgmFunc.h  PlugMain.cpp  PlugMain.h  PluginConfig.h  PluginConfigFile.cpp  PluginConfigFile.h  libvgm_decoder.def
mpg123_decoder/: CMakeLists.txt  Mp3Handle.cpp  Mp3Handle.h  Mpg123Func.cpp  Mpg123Func.h  Mpg123PlayCtrl.cpp  Mpg123PlayCtrl.h  PlugMain.cpp  PlugMain.h
src/: main.cpp
src/core/: AudioConvert.cpp  AudioInfo.cpp  BitReader.h  CDSectionStream.cpp  CMakeLists.txt  ConvertFormat.cpp  FileStream.cpp  MediaTag.cpp  MediaTagNames.cpp  MemBufStream.cpp  RiffUtils.cpp  SndfileFunc.cpp  StdFileSystem.cpp  StringEx.cpp  UnicodeConvert.cpp  UnicodeNormalize.cpp  Utf8String.cpp
src/decoder/: AudioDecoderMap.cpp  CMakeLists.txt  DecoderDllWrapper.cpp  DecoderFactory.cpp  DecoderParameters.cpp  DecoderParametersMgmt.cpp  Mp3Decoder.cpp  Mp3Handle.cpp  NativeDecoder.cpp  PluginConfig.cpp  PluginDecoder.cpp  PluginsMgmt.cpp  WavDecoder.cpp
src/encoder/: CMakeLists.txt  EncoderFactory.cpp  Mp3Encoder.cpp  NativeEncoder.cpp  WavEncoder.cpp
src/player/: AudioDeviceMgmt.cpp  AudioSource.cpp  AudioTarget.cpp  CMakeLists.txt  DeviceInfoWin.cpp  DsAudioDevice.cpp  GlobalConfig.cpp  Music.cpp  PlayInterface.cpp  PlayList.cpp  PlayListFile.cpp  PlaySequence.cpp  Playback.cpp  SoxEffects.cpp  SoxInputEffect.cpp  SoxOutputEffect.cpp  SpeakerConfig.cpp  StdFileSystem.cpp  SystemFunc.cpp  TUIPlayerUI.cpp  WasapiAudioDevice.cpp
task_desc/: todo_task 111.txt  todo_task 113.txt  todo_task 114.txt  todo_task 115.txt  todo_task 116.txt  todo_task 117.txt  todo_task_1.txt  todo_task_100.txt  todo_task_101.txt  todo_task_102.txt  todo_task_103.txt  todo_task_104.txt  todo_task_105.txt  todo_task_106.txt  todo_task_107.txt  todo_task_108.txt  todo_task_109.txt  todo_task_11.txt  todo_task_118.txt  todo_task_119.txt  todo_task_120.txt  todo_task_121.txt  todo_task_122.txt  todo_task_123.txt  todo_task_124.txt  todo_task_125.txt  todo_task_126.txt  todo_task_127.txt  todo_task_13.txt  todo_task_15.txt  todo_task_16.txt  todo_task_19.txt  todo_task_23.txt  todo_task_24.txt  todo_task_27.txt  todo_task_28.txt  todo_task_29.txt  todo_task_35.txt  todo_task_36.txt  todo_task_37.txt  (+35 more)
test/: CMakeLists.txt  main.cpp
test/core/: CoreTests.cpp  MediaTagTests.cpp  UnicodeConvertTests.cpp  UnicodeNormalizeTests.cpp  Utf8StringTests.cpp
test/decoder/: AudioDecoderMapTests.cpp  DecoderFactoryTests.cpp  DecoderTests.cpp  PluginConfigTests.cpp
test/encoder/: EncoderTests.cpp
test/player/: PlayerTests.cpp
wavpack_decoder/: CMakeLists.txt  PlugMain.cpp  PlugMain.h  WavpackFunc.cpp  WavpackFunc.h  WavpackPlayCtrl.cpp  WavpackPlayCtrl.h
